Fixed img positioning in featured story image wrap

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -63,10 +63,6 @@ body {
 	width: 220px;
 	overflow: hidden;
 	margin-bottom: 10px;
-	img {
-		margin-top: -74px;
-		width: 220px;
-	}
 }
 
 .byline {
